HexaEngine.DirectXTex.Native/HexaTexture.h

	API DirectX::Blob* NewBlob();
	API HRESULT BlobInitialize(DirectX::Blob* blob, _In_ size_t size) noexcept;
	API void BlobRelease(DirectX::Blob** blob) noexcept;
	API void* BlobGetBufferPointer(DirectX::Blob* blob) noexcept;
	API size_t BlobGetBufferSize(DirectX::Blob* blob) noexcept;
	API HRESULT BlobResize(DirectX::Blob* blob, size_t size) noexcept;
	// Reallocate for a new size

	API HRESULT BlobTrim(DirectX::Blob* blob, size_t size) noexcept;
	// DDS operations
	API HRESULT LoadFromDDSMemory(_In_reads_bytes_(size) const void* pSource, _In_ size_t& size, _In_ DirectX::DDS_FLAGS& flags, _Out_opt_ DirectX::TexMetadata* metadata, DirectX::ScratchImage* image) noexcept;
	API HRESULT LoadFromDDSFile(_In_z_ const wchar_t* szFile, _In_ DirectX::DDS_FLAGS flags, _Out_opt_ DirectX::TexMetadata* metadata, DirectX::ScratchImage* image) noexcept;
	API HRESULT SaveToDDSMemory(_In_ const DirectX::Image& image, _In_ DirectX::DDS_FLAGS flags, _Out_ DirectX::Blob& blob) noexcept;
	API HRESULT SaveToDDSMemory2(_In_reads_(nimages) const DirectX::Image* images, _In_ size_t nimages, _In_ const DirectX::TexMetadata& metadata, _In_ DirectX::DDS_FLAGS flags, _Out_ DirectX::Blob& blob) noexcept;
	API HRESULT SaveToDDSFile(_In_ const DirectX::Image& image, _In_ DirectX::DDS_FLAGS flags, _In_z_ const wchar_t* szFile) noexcept;
	API HRESULT SaveToDDSFile2(_In_reads_(nimages) const DirectX::Image* images, _In_ size_t& nimages, _In_ const DirectX::TexMetadata& metadata, _In_ DirectX::DDS_FLAGS flags, _In_z_ const wchar_t* szFile) noexcept;
	// HDR operations
	API HRESULT LoadFromHDRMemory(_In_reads_bytes_(size) const void* pSource, _In_ size_t size, _Out_opt_ DirectX::TexMetadata* metadata, DirectX::ScratchImage* image) noexcept;
	API HRESULT LoadFromHDRFile(_In_z_ const wchar_t* szFile, _Out_opt_ DirectX::TexMetadata* metadata, DirectX::ScratchImage* image) noexcept;
	API HRESULT SaveToHDRMemory(_In_ const DirectX::Image& image, _Out_ DirectX::Blob& blob) noexcept;
	API HRESULT SaveToHDRFile(_In_ const DirectX::Image& image, _In_z_ const wchar_t* szFile) noexcept;
	// TGA operations
	API HRESULT LoadFromTGAMemory(_In_reads_bytes_(size) const void* pSource, _In_ size_t size, _In_ DirectX::TGA_FLAGS flags, _Out_opt_ DirectX::TexMetadata* metadata, DirectX::ScratchImage* image) noexcept;
	API HRESULT LoadFromTGAFile(_In_z_ const wchar_t* szFile, _In_ DirectX::TGA_FLAGS flags, _Out_opt_ DirectX::TexMetadata* metadata, DirectX::ScratchImage* image) noexcept;
	API HRESULT SaveToTGAMemory(_In_ const DirectX::Image& image, _In_ DirectX::TGA_FLAGS flags, _Out_ DirectX::Blob& blob, _In_opt_ const DirectX::TexMetadata* metadata = nullptr) noexcept;
	API HRESULT SaveToTGAFile(_In_ const DirectX::Image& image, _In_ DirectX::TGA_FLAGS flags, _In_z_ const wchar_t* szFile, _In_opt_ const DirectX::TexMetadata* metadata = nullptr) noexcept;
	API HRESULT LoadFromWICMemory(_In_reads_bytes_(size) const void* pSource, _In_ size_t& size, _In_ DirectX::WIC_FLAGS& flags, _Out_opt_ DirectX::TexMetadata* metadata, DirectX::ScratchImage* image, _In_opt_ std::function<void __cdecl(IWICMetadataQueryReader*)> getMQR = nullptr);
	API HRESULT LoadFromWICFile(_In_z_ const wchar_t* szFile, _In_ DirectX::WIC_FLAGS flags, _Out_opt_ DirectX::TexMetadata* metadata, DirectX::ScratchImage* image, _In_opt_ std::function<void __cdecl(IWICMetadataQueryReader*)> getMQR = nullptr);
	API HRESULT SaveToWICMemory(_In_ const DirectX::Image& image, _In_ DirectX::WIC_FLAGS flags, _In_ REFGUID guidContainerFormat, _Out_ DirectX::Blob& blob, _In_opt_ const GUID* targetFormat = nullptr, _In_opt_ std::function<void __cdecl(IPropertyBag2*)> setCustomProps = nullptr);
	API HRESULT SaveToWICMemory2(_In_count_(nimages) const DirectX::Image* images, _In_ size_t nimages, _In_ DirectX::WIC_FLAGS flags, _In_ REFGUID guidContainerFormat, _Out_ DirectX::Blob& blob, _In_opt_ const GUID* targetFormat = nullptr, _In_opt_ std::function<void __cdecl(IPropertyBag2*)> setCustomProps = nullptr);
	API HRESULT SaveToWICFile(_In_ const DirectX::Image& image, _In_ DirectX::WIC_FLAGS flags, _In_ REFGUID guidContainerFormat, _In_z_ const wchar_t* szFile, _In_opt_ const GUID* targetFormat = nullptr, _In_opt_ std::function<void __cdecl(IPropertyBag2*)> setCustomProps = nullptr);
	API HRESULT SaveToWICFile2(_In_count_(nimages) const DirectX::Image* images, _In_ size_t nimages, _In_ DirectX::WIC_FLAGS flags, _In_ REFGUID guidContainerFormat, _In_z_ const wchar_t* szFile, _In_opt_ const GUID* targetFormat = nullptr, _In_opt_ std::function<void __cdecl(IPropertyBag2*)> setCustomProps = nullptr);
	// Compatability helpers
	API HRESULT LoadFromTGAMemory2(_In_reads_bytes_(size) const void* pSource, _In_ size_t size, _Out_opt_ DirectX::TexMetadata* metadata, DirectX::ScratchImage* image) noexcept;
	API HRESULT LoadFromTGAFile2(_In_z_ const wchar_t* szFile, _Out_opt_ DirectX::TexMetadata* metadata, DirectX::ScratchImage* image) noexcept;
	API HRESULT SaveToTGAMemory2(_In_ const DirectX::Image& image, _Out_ DirectX::Blob& blob, _In_opt_ const DirectX::TexMetadata* metadata = nullptr) noexcept;
	API HRESULT SaveToTGAFile2(_In_ const DirectX::Image& image, _In_z_ const wchar_t* szFile, _In_opt_ const DirectX::TexMetadata* metadata = nullptr) noexcept;
	API HRESULT FlipRotate(_In_ const DirectX::Image& srcImage, _In_ DirectX::TEX_FR_FLAGS flags, _Out_ DirectX::ScratchImage& image) noexcept;
	API HRESULT FlipRotate2(_In_reads_(nimages) const DirectX::Image* srcImages, _In_ size_t nimages, _In_ const DirectX::TexMetadata& metadata, _In_ DirectX::TEX_FR_FLAGS flags, _Out_ DirectX::ScratchImage& result) noexcept;
	API HRESULT Resize(_In_ const DirectX::Image& srcImage, _In_ size_t width, _In_ size_t height, _In_ DirectX::TEX_FILTER_FLAGS filter, _Out_ DirectX::ScratchImage& image) noexcept;
	API HRESULT Resize2(_In_reads_(nimages) const DirectX::Image* srcImages, _In_ size_t nimages, _In_ const DirectX::TexMetadata& metadata, _In_ size_t width, _In_ size_t height, _In_ DirectX::TEX_FILTER_FLAGS filter, _Out_ DirectX::ScratchImage& result) noexcept;
	API HRESULT Convert(_In_ const DirectX::Image& srcImage, _In_ DXGI_FORMAT format, _In_ DirectX::TEX_FILTER_FLAGS filter, _In_ float threshold, _Out_ DirectX::ScratchImage& image) noexcept;
	API HRESULT Convert2(_In_reads_(nimages) const DirectX::Image* srcImages, _In_ size_t nimages, _In_ const DirectX::TexMetadata& metadata, _In_ DXGI_FORMAT format, _In_ DirectX::TEX_FILTER_FLAGS filter, _In_ float threshold, _Out_ DirectX::ScratchImage& result) noexcept;
	// Convert the image to a new format

	API HRESULT ConvertToSinglePlane(_In_ const DirectX::Image& srcImage, _Out_ DirectX::ScratchImage& image) noexcept;
	API HRESULT ConvertToSinglePlane2(_In_reads_(nimages) const DirectX::Image* srcImages, _In_ size_t nimages, _In_ const DirectX::TexMetadata& metadata, _Out_ DirectX::ScratchImage& image) noexcept;
	API HRESULT EvaluateImage(_In_ const DirectX::Image& image, _In_ std::function<void(_In_reads_(width) const DirectX::XMVECTOR* pixels, size_t width, size_t y)> pixelFunc);
	API HRESULT EvaluateImage2(_In_reads_(nimages) const DirectX::Image* images, _In_ size_t nimages, _In_ const DirectX::TexMetadata& metadata, _In_ std::function<void(_In_reads_(width) const DirectX::XMVECTOR* pixels, size_t width, size_t y)> pixelFunc);
	API HRESULT TransformImage(_In_ const DirectX::Image& image, _In_ std::function<void(_Out_writes_(width) DirectX::XMVECTOR* outPixels, _In_reads_(width) const DirectX::XMVECTOR* inPixels, size_t width, size_t y)> pixelFunc, DirectX::ScratchImage& result);
	API HRESULT TransformImage2(_In_reads_(nimages) const DirectX::Image* srcImages, _In_ size_t nimages, _In_ const DirectX::TexMetadata& metadata, _In_ std::function<void(_Out_writes_(width) DirectX::XMVECTOR* outPixels, _In_reads_(width) const DirectX::XMVECTOR* inPixels, size_t width, size_t y)> pixelFunc, DirectX::ScratchImage& result);