HexaEngine.DirectXTex/Native.cs


        #endregion ScratchImageInternal

        #region BlobInternal

        [LibraryImport(LibName)]
        [UnmanagedCallConv(CallConvs = new Type[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
        public static unsafe partial void* NewBlob();

        [LibraryImport(LibName)]
        [UnmanagedCallConv(CallConvs = new Type[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
        public static unsafe partial int BlobInitialize(void* blob, in ulong size);

        [LibraryImport(LibName)]
        [UnmanagedCallConv(CallConvs = new Type[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
        public static unsafe partial void BlobRelease(void** blob);

        [LibraryImport(LibName)]
        [UnmanagedCallConv(CallConvs = new Type[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
        public static unsafe partial void* BlobGetBufferPointer(void* blob);

        [LibraryImport(LibName)]
        [UnmanagedCallConv(CallConvs = new Type[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
        public static unsafe partial ulong BlobGetBufferSize(void* blob);

        [LibraryImport(LibName)]
        [UnmanagedCallConv(CallConvs = new Type[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
        public static unsafe partial int BlobResize(void* blob, ulong size);

        // Reallocate for a new size
        [LibraryImport(LibName)]
        [UnmanagedCallConv(CallConvs = new Type[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
        public static unsafe partial int BlobTrim(void* blob, ulong size);

        // Shorten size without reallocation

        #endregion BlobInternal

        #region ImageIO

        // DDS operations
        [LibraryImport(LibName)]
        [UnmanagedCallConv(CallConvs = new Type[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
        public static unsafe partial int LoadFromDDSMemory(void* pSource, in ulong size, in DDSFlags flags, TexMetadata* metadata, void* image);

        [LibraryImport(LibName, StringMarshalling = StringMarshalling.Utf16)]
        [UnmanagedCallConv(CallConvs = new Type[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
        public static unsafe partial int LoadFromDDSFile(string szFile, in DDSFlags flags, TexMetadata* metadata, void* image);

        [LibraryImport(LibName)]
        [UnmanagedCallConv(CallConvs = new Type[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
        public static unsafe partial int SaveToDDSMemory(in Image* image, in DDSFlags flags, TexBlob* blob);

        [LibraryImport(LibName)]
        [UnmanagedCallConv(CallConvs = new Type[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
        public static unsafe partial int SaveToDDSMemory2(Image* images, in ulong nimages, in TexMetadata* metadata, in DDSFlags flags, TexBlob* blob);

        [LibraryImport(LibName, StringMarshalling = StringMarshalling.Utf16)]
        [UnmanagedCallConv(CallConvs = new Type[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
        public static unsafe partial int SaveToDDSFile(in Image* image, in DDSFlags flags, string szFile);

        [LibraryImport(LibName, StringMarshalling = StringMarshalling.Utf16)]
        [UnmanagedCallConv(CallConvs = new Type[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
        public static unsafe partial int SaveToDDSFile2(Image* images, in ulong nimages, in TexMetadata* metadata, in DDSFlags flags, string szFile);

        // HDR operations
        [LibraryImport(LibName)]
        [UnmanagedCallConv(CallConvs = new Type[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
        public static unsafe partial int LoadFromHDRMemory(void* pSource, in ulong size, TexMetadata* metadata, void* image);

        [LibraryImport(LibName, StringMarshalling = StringMarshalling.Utf16)]
        [UnmanagedCallConv(CallConvs = new Type[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
        public static unsafe partial int LoadFromHDRFile(string szFile, TexMetadata* metadata, void* image);

        [LibraryImport(LibName)]
        [UnmanagedCallConv(CallConvs = new Type[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
        public static unsafe partial int SaveToHDRMemory(in Image* image, TexBlob* blob);

        [LibraryImport(LibName, StringMarshalling = StringMarshalling.Utf16)]
        [UnmanagedCallConv(CallConvs = new Type[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
        public static unsafe partial int SaveToHDRFile(in Image* image, string szFile);

        // TGA operations
        [LibraryImport(LibName)]
        [UnmanagedCallConv(CallConvs = new Type[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
        public static unsafe partial int LoadFromTGAMemory(void* pSource, in ulong size, in TGAFlags flags, TexMetadata* metadata, void* image);

        [LibraryImport(LibName, StringMarshalling = StringMarshalling.Utf16)]
        [UnmanagedCallConv(CallConvs = new Type[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
        public static unsafe partial int LoadFromTGAFile(string szFile, in TGAFlags flags, TexMetadata* metadata, void* image);

        [LibraryImport(LibName)]
        [UnmanagedCallConv(CallConvs = new Type[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
        public static unsafe partial int SaveToTGAMemory(in Image* image, in TGAFlags flags, TexBlob* blob, TexMetadata* metadata = null);

        [LibraryImport(LibName, StringMarshalling = StringMarshalling.Utf16)]
        [UnmanagedCallConv(CallConvs = new Type[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
        public static unsafe partial int SaveToTGAFile(in Image* image, in TGAFlags flags, string szFile, TexMetadata* metadata = null);

        // WIC operations
#if !WIN32

        [LibraryImport(LibName)]
        [UnmanagedCallConv(CallConvs = new Type[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
        public static unsafe partial int LoadFromWICMemory(void* pSource, in ulong size, in WICFlags flags, TexMetadata* metadata, void* image, delegate*<IWICMetadataQueryReader*, void> getMQR = null);

        [LibraryImport(LibName, StringMarshalling = StringMarshalling.Utf16)]
        [UnmanagedCallConv(CallConvs = new Type[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
        public static unsafe partial int LoadFromWICFile(string szFile, in WICFlags flags, TexMetadata* metadata, void* image, delegate*<IWICMetadataQueryReader*, void> getMQR = null);

        [LibraryImport(LibName)]
        [UnmanagedCallConv(CallConvs = new Type[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
        public static unsafe partial int SaveToWICMemory(in Image* image, in WICFlags flags, in Guid* guidContainerFormat, TexBlob* blob, Guid* targetFormat = null, delegate*<IPropertyBag2*, void> setCustomProps = null);

        [LibraryImport(LibName)]
        [UnmanagedCallConv(CallConvs = new Type[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
        public static unsafe partial int SaveToWICMemory2(Image* images, in ulong nimages, in WICFlags flags, in Guid* guidContainerFormat, TexBlob* blob, Guid* targetFormat = null, delegate*<IPropertyBag2*, void> setCustomProps = null);

        [LibraryImport(LibName, StringMarshalling = StringMarshalling.Utf16)]
        [UnmanagedCallConv(CallConvs = new Type[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
        public static unsafe partial int SaveToWICFile(in Image* image, in WICFlags flags, in Guid* guidContainerFormat, string szFile, Guid* targetFormat = null, delegate*<IPropertyBag2*, void> setCustomProps = null);

        [LibraryImport(LibName, StringMarshalling = StringMarshalling.Utf16)]
        [UnmanagedCallConv(CallConvs = new Type[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
        public static unsafe partial int SaveToWICFile2(Image* images, in ulong nimages, in WICFlags flags, in Guid* guidContainerFormat, string szFile, Guid* targetFormat = null, delegate*<IPropertyBag2*, void> setCustomProps = null);

#endif // WIN32

        // Compatability helpers
        [LibraryImport(LibName)]
        [UnmanagedCallConv(CallConvs = new Type[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
        public static unsafe partial int LoadFromTGAMemory2(void* pSource, in ulong size, TexMetadata* metadata, void* image);

        [LibraryImport(LibName, StringMarshalling = StringMarshalling.Utf16)]
        [UnmanagedCallConv(CallConvs = new Type[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
        public static unsafe partial int LoadFromTGAFile2(string szFile, TexMetadata* metadata, void* image);

        [LibraryImport(LibName)]
        [UnmanagedCallConv(CallConvs = new Type[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
        public static unsafe partial int SaveToTGAMemory2(in Image* image, TexBlob* blob, TexMetadata* metadata = null);

        [LibraryImport(LibName, StringMarshalling = StringMarshalling.Utf16)]
        [UnmanagedCallConv(CallConvs = new Type[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
        public static unsafe partial int SaveToTGAFile2(in Image* image, string szFile, TexMetadata* metadata = null);

        #endregion ImageIO

        [SupportedOSPlatform("windows")]
        [LibraryImport(LibName)]
        [UnmanagedCallConv(CallConvs = new Type[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
        public static unsafe partial int FlipRotate(in Image* srcImage, in TexFrFlags flags, void* image);

        [SupportedOSPlatform("windows")]
        [LibraryImport(LibName)]
        [UnmanagedCallConv(CallConvs = new Type[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
        public static unsafe partial int FlipRotate2(Image* srcImages, in ulong nimages, in TexMetadata* metadata, in TexFrFlags flags, void* result);

        // Flip and/or rotate image

        [LibraryImport(LibName)]
        [UnmanagedCallConv(CallConvs = new Type[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
        public static unsafe partial int Resize(in Image* srcImage, in ulong width, in ulong height, in TexFilterFlags filter, void* image);

        [LibraryImport(LibName)]
        [UnmanagedCallConv(CallConvs = new Type[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
        public static unsafe partial int Resize2(Image* srcImages, in ulong nimages, in TexMetadata* metadata, in ulong width, in ulong height, in TexFilterFlags filter, void* result);

        [LibraryImport(LibName)]
        [UnmanagedCallConv(CallConvs = new Type[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
        public static unsafe partial int Convert(in Image* srcImage, in Format format, in TexFilterFlags filter, in float threshold, void* image);

        [LibraryImport(LibName)]
        [UnmanagedCallConv(CallConvs = new Type[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
        public static unsafe partial int Convert2(Image* srcImages, in ulong nimages, in TexMetadata* metadata, in Format format, in TexFilterFlags filter, in float threshold, void* result);

        // Convert the image to a new format

        [LibraryImport(LibName)]
        [UnmanagedCallConv(CallConvs = new Type[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
        public static unsafe partial int ConvertToSinglePlane(in Image* srcImage, void* image);

        [LibraryImport(LibName)]
        [UnmanagedCallConv(CallConvs = new Type[] { typeof(System.Runtime.CompilerServices.CallConvCdecl) })]
        public static unsafe partial int ConvertToSinglePlane2(Image* srcImages, in ulong nimages, in TexMetadata* metadata, void* image);
